updated variables for better lighthouse score on mobile, fixed saveFormData() so everything saves and removed real-time saving

--- a/css/partials/variables.css
+++ b/css/partials/variables.css
@@ -19,4 +19,7 @@
 
     /* Other variables */
     --border-radius: 5px;
+
+    /* font size */
+    font-size: 100%;
 }
